@@ -1,3 +1,7 @@
+2025-07-23 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Consider only live records in mapping utility, resolves #384
+
 2025-06-07 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Improve main exception reporting, references #380
